--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   },
   "dependencies": {
     "request": "^2.88.0"
-  }
+  },
+  "description": "JavaScript wrapper for the Spotify API",
+  "repository": "https://github.com/vilP1l/Spotify.js",
+  "author": "vilP1L <vilP1l@github.com>",
+  "private": false
 }
