--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
   "description": "JavaScript wrapper for the Spotify API",
   "repository": "https://github.com/vilP1l/Spotify.js",
   "author": "vilP1L <vilP1l@github.com>",
-  "private": false
+  "private": false,
+  "keywords": [
+    "spotify", 
+    "spotify-api",
+    "spotify-web-api",
+    "spotify api",
+    "music"
+  ]
 }
